--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>DSMovie</title>
+    <title>JVLivros</title>
   </head>
   <body>
     <noscript>Voce precisa habilitar JavaScript para este o app.</noscript>
